# ansible-role-tripleo-overcloud-scale-nodes

./: README.md  groups  project.config  setup.cfg
configs/: scale_compute.yml
defaults/: main.yml
playbooks/: scale_nodes.yml
samples/playbooks/: scale_nodes_verify.yml
tasks/: delete-original-node.yml  main.yml  pre-scale.yml  scale-nodes.yml  undo-scale.yml
templates/: delete-node.j2  deploy-nodes.j2  deploy-overcloudrc.j2  scale-deployment.j2  scale-setup-env.j2  update-scale.j2
