[metadata]
name = ansible-role-tripleo-overcloud-scale-nodes
summary = An Ansible role scaling overcloud nodes post deployment
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com, harry@redhat.com, apetrich@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-overcloud-scale-nodes
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/overcloud-scale-nodes/defaults = defaults/*
    usr/local/share/ansible/roles/overcloud-scale-nodes/handlers = handlers/*
    usr/local/share/ansible/roles/overcloud-scale-nodes/meta = meta/*
    usr/local/share/ansible/roles/overcloud-scale-nodes/tasks = tasks/*
    usr/local/share/ansible/roles/overcloud-scale-nodes/templates = templates/*
    usr/local/share/ansible/roles/overcloud-scale-nodes/tests = tests/*
    usr/local/share/ansible/roles/overcloud-scale-nodes/vars = vars/*
    playbooks = playbooks/*
    tripleo-quickstart/config/general_config/ = configs/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
